Homework 6/parser.output
Terminals unused in grammar

    SPEC
    KEYWORD


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 66 conflicts: 2 reduce/reduce
State 176 conflicts: 2 shift/reduce
State 184 conflicts: 1 shift/reduce
State 210 conflicts: 2 shift/reduce
State 213 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl
    6     | error

    7 varDecl: typeSpec varDeclList SEMICOLON
    8        | error varDeclList SEMICOLON
    9        | typeSpec error SEMICOLON

   10 scopedVarDecl: STATIC typeSpec varDeclList SEMICOLON
   11              | typeSpec varDeclList SEMICOLON

   12 varDeclList: varDeclList COMMA varDeclInit
   13            | varDeclList COMMA error
   14            | varDeclInit
   15            | error

   16 varDeclInit: varDeclId
   17            | varDeclId COLON simpleExp
   18            | error COLON simpleExp

   19 varDeclId: ID
   20          | ID LBRACKET NUMCONST RBRACKET
   21          | ID LBRACKET error
   22          | error RBRACKET

   23 typeSpec: BOOL
   24         | CHAR
   25         | INT

   26 funDecl: typeSpec ID LPAREN parms RPAREN compoundStmt
   27        | ID LPAREN parms RPAREN compoundStmt
   28        | typeSpec error
   29        | typeSpec ID LPAREN error
   30        | ID LPAREN error
   31        | ID LPAREN parms RPAREN error

   32 parms: parmList
   33      | %empty

   34 parmList: parmList SEMICOLON parmTypeList
   35         | parmTypeList
   36         | parmList SEMICOLON error
   37         | error

   38 parmTypeList: typeSpec parmIdList
   39             | typeSpec error

   40 parmIdList: parmIdList COMMA parmId
   41           | parmId
   42           | parmIdList COMMA error
   43           | error

   44 parmId: ID
   45       | ID LBRACKET RBRACKET

   46 stmt: matchedif
   47     | unmatchedif

   48 expStmt: exp SEMICOLON
   49        | SEMICOLON
   50        | error SEMICOLON

   51 compoundStmt: START localDecls stmtList STOP

   52 localDecls: localDecls scopedVarDecl
   53           | %empty

   54 stmtList: stmtList stmt
   55         | %empty

   56 matchedif: endStmt
   57          | IF simpleExp THEN matchedif ELSE matchedif
   58          | IF error
   59          | IF error ELSE matchedif
   60          | IF error THEN matchedif ELSE matchedif
   61          | WHILE simpleExp DO matchedif
   62          | WHILE error DO matchedif
   63          | WHILE error
   64          | FOR ID ASGN iterRange DO matchedif
   65          | FOR ID ASGN error DO matchedif
   66          | FOR error

   67 unmatchedif: IF simpleExp THEN matchedif ELSE unmatchedif
   68            | IF error THEN matchedif ELSE unmatchedif
   69            | WHILE simpleExp DO unmatchedif
   70            | WHILE error DO unmatchedif
   71            | FOR ID ASGN iterRange DO unmatchedif
   72            | FOR ID ASGN error DO unmatchedif
   73            | IF simpleExp THEN stmt
   74            | IF error THEN matchedif

   75 endStmt: expStmt
   76        | compoundStmt
   77        | returnStmt
   78        | breakStmt

   79 iterRange: simpleExp TO simpleExp
   80          | simpleExp TO simpleExp BY simpleExp
   81          | simpleExp TO error
   82          | error BY error
   83          | simpleExp TO simpleExp BY error

   84 returnStmt: RETURN SEMICOLON
   85           | RETURN exp SEMICOLON
   86           | RETURN error SEMICOLON

   87 breakStmt: BREAK SEMICOLON

   88 exp: mutable assignop exp
   89    | mutable INC
   90    | mutable DEC
   91    | simpleExp
   92    | error assignop exp
   93    | mutable assignop error
   94    | error INC
   95    | error DEC

   96 assignop: ASGN
   97         | ADDASGN
   98         | MINUSASGN
   99         | MULTASGN
  100         | DIVASGN

  101 simpleExp: simpleExp OR andExp
  102          | andExp
  103          | simpleExp OR error

  104 andExp: andExp AND unaryRelExp
  105       | unaryRelExp
  106       | andExp AND error

  107 unaryRelExp: NOT unaryRelExp
  108            | relExp
  109            | NOT error

  110 relExp: sumExp relop sumExp
  111       | sumExp relop error
  112       | sumExp

  113 relop: LESSTHAN
  114      | LEQ
  115      | GREATERTHAN
  116      | GEQ
  117      | EQUALS
  118      | NEQ

  119 sumExp: sumExp sumop mulExp
  120       | mulExp
  121       | sumExp sumop error

  122 sumop: PLUS
  123      | MINUS

  124 mulExp: mulExp mulop unaryExp
  125       | unaryExp
  126       | mulExp mulop error

  127 mulop: MULT
  128      | DIVIDE
  129      | PERCENT

  130 unaryExp: unaryop unaryExp
  131         | factor
  132         | unaryop error

  133 unaryop: MINUS
  134        | MULT
  135        | QMARK

  136 factor: mutable
  137       | immutable

  138 mutable: ID
  139        | ID LBRACKET exp RBRACKET

  140 immutable: LPAREN exp RPAREN
  141          | call
  142          | constant
  143          | LPAREN error

  144 call: ID LPAREN args RPAREN
  145     | error LPAREN

  146 args: argList
  147     | %empty

  148 argList: argList COMMA exp
  149        | exp
  150        | argList COMMA error

  151 constant: NUMCONST
  152         | CHARCONST
  153         | STRINGCONST
  154         | BOOLCONST


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 8 9 13 15 18 21 22 28 29 30 31 36 37 39 42 43 50 58 59 60 62 63 65 66 68 70 72 74 81 82 83 86 92 93 94 95 103 106 109 111 121 126 132 143 145 150
    ID <tokenData> (258) 19 20 21 26 27 29 30 31 44 45 64 65 71 72 138 139 144
    NUMCONST <tokenData> (259) 20 151
    CHARCONST <tokenData> (260) 152
    STRINGCONST <tokenData> (261) 153
    BOOLCONST <tokenData> (262) 154
    SPEC <tokenData> (263)
    KEYWORD <tokenData> (264)
    INC <tokenData> (265) 89 94
    DEC <tokenData> (266) 90 95
    NEQ <tokenData> (267) 118
    LEQ <tokenData> (268) 114
    GEQ <tokenData> (269) 116
    ASGN <tokenData> (270) 64 65 71 72 96
    ADDASGN <tokenData> (271) 97
    MINUSASGN <tokenData> (272) 98
    MULTASGN <tokenData> (273) 99
    DIVASGN <tokenData> (274) 100
    PLUS <tokenData> (275) 122
    MINUS <tokenData> (276) 123 133
    DIVIDE <tokenData> (277) 128
    MULT <tokenData> (278) 127 134
    EQUALS <tokenData> (279) 117
    PERCENT <tokenData> (280) 129
    COLON <tokenData> (281) 17 18
    SEMICOLON <tokenData> (282) 7 8 9 10 11 34 36 48 49 50 84 85 86 87
    COMMA <tokenData> (283) 12 13 40 42 148 150
    QMARK <tokenData> (284) 135
    IF <tokenData> (285) 57 58 59 60 67 68 73 74
    THEN <tokenData> (286) 57 60 67 68 73 74
    ELSE <tokenData> (287) 57 59 60 67 68
    FOR <tokenData> (288) 64 65 66 71 72
    BREAK <tokenData> (289) 87
    RETURN <tokenData> (290) 84 85 86
    START <tokenData> (291) 51
    STOP <tokenData> (292) 51
    WHILE <tokenData> (293) 61 62 63 69 70
    TO <tokenData> (294) 79 80 81 83
    DO <tokenData> (295) 61 62 64 65 69 70 71 72
    BY <tokenData> (296) 80 82 83
    NOT <tokenData> (297) 107 109
    STATIC <tokenData> (298) 10
    BOOL <tokenData> (299) 23
    CHAR <tokenData> (300) 24
    INT <tokenData> (301) 25
    LBRACKET <tokenData> (302) 20 21 45 139
    RBRACKET <tokenData> (303) 20 22 45 139
    LPAREN <tokenData> (304) 26 27 29 30 31 140 143 144 145
    RPAREN <tokenData> (305) 26 27 31 140 144
    OR <tokenData> (306) 101 103
    AND <tokenData> (307) 104 106
    LESSTHAN <tokenData> (308) 113
    GREATERTHAN <tokenData> (309) 115


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program (56)
        on left: 1
        on right: 0
    declList <tree> (57)
        on left: 2 3
        on right: 1 2
    decl <tree> (58)
        on left: 4 5 6
        on right: 2 3
    varDecl <tree> (59)
        on left: 7 8 9
        on right: 4
    scopedVarDecl <tree> (60)
        on left: 10 11
        on right: 52
    varDeclList <tree> (61)
        on left: 12 13 14 15
        on right: 7 8 10 11 12 13
    varDeclInit <tree> (62)
        on left: 16 17 18
        on right: 12 14
    varDeclId <tree> (63)
        on left: 19 20 21 22
        on right: 16 17
    typeSpec <type> (64)
        on left: 23 24 25
        on right: 7 9 10 11 26 28 29 38 39
    funDecl <tree> (65)
        on left: 26 27 28 29 30 31
        on right: 5
    parms <tree> (66)
        on left: 32 33
        on right: 26 27 31
    parmList <tree> (67)
        on left: 34 35 36 37
        on right: 32 34 36
    parmTypeList <tree> (68)
        on left: 38 39
        on right: 34 35
    parmIdList <tree> (69)
        on left: 40 41 42 43
        on right: 38 40 42
    parmId <tree> (70)
        on left: 44 45
        on right: 40 41
    stmt <tree> (71)
        on left: 46 47
        on right: 54 73
    expStmt <tree> (72)
        on left: 48 49 50
        on right: 75
    compoundStmt <tree> (73)
        on left: 51
        on right: 26 27 76
    localDecls <tree> (74)
        on left: 52 53
        on right: 51 52
    stmtList <tree> (75)
        on left: 54 55
        on right: 51 54
    matchedif <tree> (76)
        on left: 56 57 58 59 60 61 62 63 64 65 66
        on right: 46 57 59 60 61 62 64 65 67 68 74
    unmatchedif <tree> (77)
        on left: 67 68 69 70 71 72 73 74
        on right: 47 67 68 69 70 71 72
    endStmt <tree> (78)
        on left: 75 76 77 78
        on right: 56
    iterRange <tree> (79)
        on left: 79 80 81 82 83
        on right: 64 71
    returnStmt <tree> (80)
        on left: 84 85 86
        on right: 77
    breakStmt <tree> (81)
        on left: 87
        on right: 78
    exp <tree> (82)
        on left: 88 89 90 91 92 93 94 95
        on right: 48 85 88 92 139 140 148 149
    assignop <tree> (83)
        on left: 96 97 98 99 100
        on right: 88 92 93
    simpleExp <tree> (84)
        on left: 101 102 103
        on right: 17 18 57 61 67 69 73 79 80 81 83 91 101 103
    andExp <tree> (85)
        on left: 104 105 106
        on right: 101 102 104 106
    unaryRelExp <tree> (86)
        on left: 107 108 109
        on right: 104 105 107
    relExp <tree> (87)
        on left: 110 111 112
        on right: 108
    relop <tree> (88)
        on left: 113 114 115 116 117 118
        on right: 110 111
    sumExp <tree> (89)
        on left: 119 120 121
        on right: 110 111 112 119 121
    sumop <tree> (90)
        on left: 122 123
        on right: 119 121
    mulExp <tree> (91)
        on left: 124 125 126
        on right: 119 120 124 126
    mulop <tree> (92)
        on left: 127 128 129
        on right: 124 126
    unaryExp <tree> (93)
        on left: 130 131 132
        on right: 124 125 130
    unaryop <tree> (94)
        on left: 133 134 135
        on right: 130 132
    factor <tree> (95)
        on left: 136 137
        on right: 131
    mutable <tree> (96)
        on left: 138 139
        on right: 88 89 90 93 136
    immutable <tree> (97)
        on left: 140 141 142 143
        on right: 137
    call <tree> (98)
        on left: 144 145
        on right: 141
    args <tree> (99)
        on left: 146 147
        on right: 144
    argList <tree> (100)
        on left: 148 149 150
        on right: 146 148 150
    constant <tree> (101)
        on left: 151 152 153 154
        on right: 142


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    program   go to state 6
    declList  go to state 7
    decl      go to state 8
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 1

    6 decl: error •
    8 varDecl: error • varDeclList SEMICOLON

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (decl)
    error  [reduce using rule 6 (decl)]
    ID     [reduce using rule 6 (decl)]
    BOOL   reduce using rule 6 (decl)
    CHAR   reduce using rule 6 (decl)
    INT    reduce using rule 6 (decl)

    varDeclList  go to state 14
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 2

   27 funDecl: ID • LPAREN parms RPAREN compoundStmt
   30        | ID • LPAREN error
   31        | ID • LPAREN parms RPAREN error

    LPAREN  shift, and go to state 17


State 3

   23 typeSpec: BOOL •

    $default  reduce using rule 23 (typeSpec)


State 4

   24 typeSpec: CHAR •

    $default  reduce using rule 24 (typeSpec)


State 5

   25 typeSpec: INT •

    $default  reduce using rule 25 (typeSpec)


State 6

    0 $accept: program • $end

    $end  shift, and go to state 18


State 7

    1 program: declList •
    2 declList: declList • decl

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl      go to state 19
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 8

    3 declList: decl •

    $default  reduce using rule 3 (declList)


State 9

    4 decl: varDecl •

    $default  reduce using rule 4 (decl)


State 10

    7 varDecl: typeSpec • varDeclList SEMICOLON
    9        | typeSpec • error SEMICOLON
   26 funDecl: typeSpec • ID LPAREN parms RPAREN compoundStmt
   28        | typeSpec • error
   29        | typeSpec • ID LPAREN error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList  go to state 22
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 11

    5 decl: funDecl •

    $default  reduce using rule 5 (decl)


State 12

   15 varDeclList: error •
   18 varDeclInit: error • COLON simpleExp
   22 varDeclId: error • RBRACKET

    COLON     shift, and go to state 23
    RBRACKET  shift, and go to state 24

    $default  reduce using rule 15 (varDeclList)


State 13

   19 varDeclId: ID •
   20          | ID • LBRACKET NUMCONST RBRACKET
   21          | ID • LBRACKET error

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


State 14

    8 varDecl: error varDeclList • SEMICOLON
   12 varDeclList: varDeclList • COMMA varDeclInit
   13            | varDeclList • COMMA error

    SEMICOLON  shift, and go to state 26
    COMMA      shift, and go to state 27


State 15

   14 varDeclList: varDeclInit •

    $default  reduce using rule 14 (varDeclList)


State 16

   16 varDeclInit: varDeclId •
   17            | varDeclId • COLON simpleExp

    COLON  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInit)


State 17

   27 funDecl: ID LPAREN • parms RPAREN compoundStmt
   30        | ID LPAREN • error
   31        | ID LPAREN • parms RPAREN error

    error  shift, and go to state 29
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 31
    parmList      go to state 32
    parmTypeList  go to state 33


State 18

    0 $accept: program $end •

    $default  accept


State 19

    2 declList: declList decl •

    $default  reduce using rule 2 (declList)


State 20

    9 varDecl: typeSpec error • SEMICOLON
   15 varDeclList: error •
   18 varDeclInit: error • COLON simpleExp
   22 varDeclId: error • RBRACKET
   28 funDecl: typeSpec error •

    COLON      shift, and go to state 23
    SEMICOLON  shift, and go to state 34
    RBRACKET   shift, and go to state 24

    SEMICOLON  [reduce using rule 15 (varDeclList)]
    COMMA      reduce using rule 15 (varDeclList)
    $default   reduce using rule 28 (funDecl)


State 21

   19 varDeclId: ID •
   20          | ID • LBRACKET NUMCONST RBRACKET
   21          | ID • LBRACKET error
   26 funDecl: typeSpec ID • LPAREN parms RPAREN compoundStmt
   29        | typeSpec ID • LPAREN error

    LBRACKET  shift, and go to state 25
    LPAREN    shift, and go to state 35

    $default  reduce using rule 19 (varDeclId)


State 22

    7 varDecl: typeSpec varDeclList • SEMICOLON
   12 varDeclList: varDeclList • COMMA varDeclInit
   13            | varDeclList • COMMA error

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 27


State 23

   18 varDeclInit: error COLON • simpleExp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 24

   22 varDeclId: error RBRACKET •

    $default  reduce using rule 22 (varDeclId)


State 25

   20 varDeclId: ID LBRACKET • NUMCONST RBRACKET
   21          | ID LBRACKET • error

    error     shift, and go to state 61
    NUMCONST  shift, and go to state 62


State 26

    8 varDecl: error varDeclList SEMICOLON •

    $default  reduce using rule 8 (varDecl)


State 27

   12 varDeclList: varDeclList COMMA • varDeclInit
   13            | varDeclList COMMA • error

    error  shift, and go to state 63
    ID     shift, and go to state 13

    varDeclInit  go to state 64
    varDeclId    go to state 16


State 28

   17 varDeclInit: varDeclId COLON • simpleExp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    simpleExp    go to state 65
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 29

   30 funDecl: ID LPAREN error •
   37 parmList: error •

    SEMICOLON  reduce using rule 37 (parmList)
    RPAREN     reduce using rule 37 (parmList)
    $default   reduce using rule 30 (funDecl)


State 30

   38 parmTypeList: typeSpec • parmIdList
   39             | typeSpec • error

    error  shift, and go to state 66
    ID     shift, and go to state 67

    parmIdList  go to state 68
    parmId      go to state 69


State 31

   27 funDecl: ID LPAREN parms • RPAREN compoundStmt
   31        | ID LPAREN parms • RPAREN error

    RPAREN  shift, and go to state 70


State 32

   32 parms: parmList •
   34 parmList: parmList • SEMICOLON parmTypeList
   36         | parmList • SEMICOLON error

    SEMICOLON  shift, and go to state 71

    $default  reduce using rule 32 (parms)


State 33

   35 parmList: parmTypeList •

    $default  reduce using rule 35 (parmList)


State 34

    9 varDecl: typeSpec error SEMICOLON •

    $default  reduce using rule 9 (varDecl)


State 35

   26 funDecl: typeSpec ID LPAREN • parms RPAREN compoundStmt
   29        | typeSpec ID LPAREN • error

    error  shift, and go to state 72
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 73
    parmList      go to state 32
    parmTypeList  go to state 33


State 36

    7 varDecl: typeSpec varDeclList SEMICOLON •

    $default  reduce using rule 7 (varDecl)


State 37

  145 call: error • LPAREN

    LPAREN  shift, and go to state 74


State 38

  138 mutable: ID •
  139        | ID • LBRACKET exp RBRACKET
  144 call: ID • LPAREN args RPAREN

    LBRACKET  shift, and go to state 75
    LPAREN    shift, and go to state 76

    $default  reduce using rule 138 (mutable)


State 39

  151 constant: NUMCONST •

    $default  reduce using rule 151 (constant)


State 40

  152 constant: CHARCONST •

    $default  reduce using rule 152 (constant)


State 41

  153 constant: STRINGCONST •

    $default  reduce using rule 153 (constant)


State 42

  154 constant: BOOLCONST •

    $default  reduce using rule 154 (constant)


State 43

  133 unaryop: MINUS •

    $default  reduce using rule 133 (unaryop)


State 44

  134 unaryop: MULT •

    $default  reduce using rule 134 (unaryop)


State 45

  135 unaryop: QMARK •

    $default  reduce using rule 135 (unaryop)


State 46

  107 unaryRelExp: NOT • unaryRelExp
  109            | NOT • error

    error        shift, and go to state 77
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    unaryRelExp  go to state 78
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 47

  140 immutable: LPAREN • exp RPAREN
  143          | LPAREN • error

    error        shift, and go to state 79
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    exp          go to state 80
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 48

   18 varDeclInit: error COLON simpleExp •
  101 simpleExp: simpleExp • OR andExp
  103          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 18 (varDeclInit)


State 49

  102 simpleExp: andExp •
  104 andExp: andExp • AND unaryRelExp
  106       | andExp • AND error

    AND  shift, and go to state 84

    $default  reduce using rule 102 (simpleExp)


State 50

  105 andExp: unaryRelExp •

    $default  reduce using rule 105 (andExp)


State 51

  108 unaryRelExp: relExp •

    $default  reduce using rule 108 (unaryRelExp)


State 52

  110 relExp: sumExp • relop sumExp
  111       | sumExp • relop error
  112       | sumExp •
  119 sumExp: sumExp • sumop mulExp
  121       | sumExp • sumop error

    NEQ          shift, and go to state 85
    LEQ          shift, and go to state 86
    GEQ          shift, and go to state 87
    PLUS         shift, and go to state 88
    MINUS        shift, and go to state 89
    EQUALS       shift, and go to state 90
    LESSTHAN     shift, and go to state 91
    GREATERTHAN  shift, and go to state 92

    $default  reduce using rule 112 (relExp)

    relop  go to state 93
    sumop  go to state 94


State 53

  120 sumExp: mulExp •
  124 mulExp: mulExp • mulop unaryExp
  126       | mulExp • mulop error

    DIVIDE   shift, and go to state 95
    MULT     shift, and go to state 96
    PERCENT  shift, and go to state 97

    $default  reduce using rule 120 (sumExp)

    mulop  go to state 98


State 54

  125 mulExp: unaryExp •

    $default  reduce using rule 125 (mulExp)


State 55

  130 unaryExp: unaryop • unaryExp
  132         | unaryop • error

    error        shift, and go to state 99
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    LPAREN       shift, and go to state 47

    unaryExp   go to state 100
    unaryop    go to state 55
    factor     go to state 56
    mutable    go to state 57
    immutable  go to state 58
    call       go to state 59
    constant   go to state 60


State 56

  131 unaryExp: factor •

    $default  reduce using rule 131 (unaryExp)


State 57

  136 factor: mutable •

    $default  reduce using rule 136 (factor)


State 58

  137 factor: immutable •

    $default  reduce using rule 137 (factor)


State 59

  141 immutable: call •

    $default  reduce using rule 141 (immutable)


State 60

  142 immutable: constant •

    $default  reduce using rule 142 (immutable)


State 61

   21 varDeclId: ID LBRACKET error •

    $default  reduce using rule 21 (varDeclId)


State 62

   20 varDeclId: ID LBRACKET NUMCONST • RBRACKET

    RBRACKET  shift, and go to state 101


State 63

   13 varDeclList: varDeclList COMMA error •
   18 varDeclInit: error • COLON simpleExp
   22 varDeclId: error • RBRACKET

    COLON     shift, and go to state 23
    RBRACKET  shift, and go to state 24

    $default  reduce using rule 13 (varDeclList)


State 64

   12 varDeclList: varDeclList COMMA varDeclInit •

    $default  reduce using rule 12 (varDeclList)


State 65

   17 varDeclInit: varDeclId COLON simpleExp •
  101 simpleExp: simpleExp • OR andExp
  103          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 17 (varDeclInit)


State 66

   39 parmTypeList: typeSpec error •
   43 parmIdList: error •

    SEMICOLON  reduce using rule 39 (parmTypeList)
    SEMICOLON  [reduce using rule 43 (parmIdList)]
    COMMA      reduce using rule 43 (parmIdList)
    RPAREN     reduce using rule 39 (parmTypeList)
    RPAREN     [reduce using rule 43 (parmIdList)]
    $default   reduce using rule 39 (parmTypeList)


State 67

   44 parmId: ID •
   45       | ID • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 102

    $default  reduce using rule 44 (parmId)


State 68

   38 parmTypeList: typeSpec parmIdList •
   40 parmIdList: parmIdList • COMMA parmId
   42           | parmIdList • COMMA error

    COMMA  shift, and go to state 103

    $default  reduce using rule 38 (parmTypeList)


State 69

   41 parmIdList: parmId •

    $default  reduce using rule 41 (parmIdList)


State 70

   27 funDecl: ID LPAREN parms RPAREN • compoundStmt
   31        | ID LPAREN parms RPAREN • error

    error  shift, and go to state 104
    START  shift, and go to state 105

    compoundStmt  go to state 106


State 71

   34 parmList: parmList SEMICOLON • parmTypeList
   36         | parmList SEMICOLON • error

    error  shift, and go to state 107
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 108


State 72

   29 funDecl: typeSpec ID LPAREN error •
   37 parmList: error •

    SEMICOLON  reduce using rule 37 (parmList)
    RPAREN     reduce using rule 37 (parmList)
    $default   reduce using rule 29 (funDecl)


State 73

   26 funDecl: typeSpec ID LPAREN parms • RPAREN compoundStmt

    RPAREN  shift, and go to state 109


State 74

  145 call: error LPAREN •

    $default  reduce using rule 145 (call)


State 75

  139 mutable: ID LBRACKET • exp RBRACKET

    error        shift, and go to state 110
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    exp          go to state 111
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 76

  144 call: ID LPAREN • args RPAREN

    error        shift, and go to state 110
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    RPAREN  reduce using rule 147 (args)

    exp          go to state 112
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    args         go to state 113
    argList      go to state 114
    constant     go to state 60


State 77

  109 unaryRelExp: NOT error •
  145 call: error • LPAREN

    LPAREN  shift, and go to state 74

    $default  reduce using rule 109 (unaryRelExp)


State 78

  107 unaryRelExp: NOT unaryRelExp •

    $default  reduce using rule 107 (unaryRelExp)


State 79

   92 exp: error • assignop exp
   94    | error • INC
   95    | error • DEC
  143 immutable: LPAREN error •
  145 call: error • LPAREN

    INC        shift, and go to state 115
    DEC        shift, and go to state 116
    ASGN       shift, and go to state 117
    ADDASGN    shift, and go to state 118
    MINUSASGN  shift, and go to state 119
    MULTASGN   shift, and go to state 120
    DIVASGN    shift, and go to state 121
    LPAREN     shift, and go to state 74

    $default  reduce using rule 143 (immutable)

    assignop  go to state 122


State 80

  140 immutable: LPAREN exp • RPAREN

    RPAREN  shift, and go to state 123


State 81

   91 exp: simpleExp •
  101 simpleExp: simpleExp • OR andExp
  103          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 91 (exp)


State 82

   88 exp: mutable • assignop exp
   89    | mutable • INC
   90    | mutable • DEC
   93    | mutable • assignop error
  136 factor: mutable •

    INC        shift, and go to state 124
    DEC        shift, and go to state 125
    ASGN       shift, and go to state 117
    ADDASGN    shift, and go to state 118
    MINUSASGN  shift, and go to state 119
    MULTASGN   shift, and go to state 120
    DIVASGN    shift, and go to state 121

    $default  reduce using rule 136 (factor)

    assignop  go to state 126


State 83

  101 simpleExp: simpleExp OR • andExp
  103          | simpleExp OR • error

    error        shift, and go to state 127
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    andExp       go to state 128
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 84

  104 andExp: andExp AND • unaryRelExp
  106       | andExp AND • error

    error        shift, and go to state 129
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    unaryRelExp  go to state 130
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 85

  118 relop: NEQ •

    $default  reduce using rule 118 (relop)


State 86

  114 relop: LEQ •

    $default  reduce using rule 114 (relop)


State 87

  116 relop: GEQ •

    $default  reduce using rule 116 (relop)


State 88

  122 sumop: PLUS •
